Add authentication Delete useless constructor Refactor vote controllers