@@ -5,13 +5,12 @@ import com.albabich.grad.to.RestaurantTo;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RestaurantUtil {
     public static List<RestaurantTo> getTos(Collection<Restaurant> restaurants) {
         return restaurants.stream()
-                .map(restaurant -> createTo(restaurant))
-                .collect(Collectors.toList());
+                .map(RestaurantUtil::createTo)
+                .toList();
     }
 
     public static RestaurantTo createTo(Restaurant restaurant) {
